# jet

./: .dockerignore  .emmyrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  Cargo.toml  Containerfile  LICENSE  MULTI_KERNEL_SUPPORT.md  Makefile  README.md  RELEASE.md  _AGENT_CLI_OUTPUT.md  _AGENT_SUMMARY.md  ai-notes.md  build.rs  connection_file.json  dist-workspace.toml  pyproject.toml  tmp.R
.config/: nextest.toml
.github/actions/install-ark/: action.yml
.github/actions/install-ipykernel/: action.yml
.github/workflows/: cargo_test.yml  release.yml  test_frozen.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  completer.rs  fmt.rs  main.rs  picker.rs  pickers.rs  repl.rs  skill.md  window_title.rs
crates/cli/src/render/: ansi.rs  mod.rs  style.rs  tmux.rs
crates/cli/src/render/kitty/: cell_size.rs  diacritics.rs  mod.rs
crates/cli/tests/: connect.rs  execute.rs  kernel_lifecycle.rs  repl.rs  sessions.rs  snapshots.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/snapshots/: snapshots__backspace_merges_continuation_back_into_editor.snap  snapshots__banner_renders_before_first_prompt.snap  snapshots__complete_one_liner_executes.snap  snapshots__foreign_attach_session_name_appears_as_prefix.snap  snapshots__foreign_multi_line_cell_renders_with_continuation_prefix.snap  snapshots__foreign_prompt_style_renders_name_prompt_no_wrap.snap  snapshots__foreign_start_session_name_appears_as_prefix.snap  snapshots__foreign_traceback_lines_are_tagged.snap  snapshots__input_request_displays_and_accepts_value.snap  snapshots__multi_line_function_definition_executes.snap  snapshots__rich_live_animation_collapses_via_clear_output.snap  snapshots__single_client_executes_print.snap  snapshots__two_clients_foreign_print_is_tagged_and_visible__observer_screen.snap  snapshots__typing_after_foreign_output_does_not_clear_screen.snap  snapshots__typing_after_foreign_output_does_not_clear_screen__raw_pre_type.snap  snapshots__typing_after_foreign_output_does_not_clear_screen__raw_pre_type.snap.new  snapshots__typing_after_foreign_output_does_not_clear_screen__raw_type_response.snap
crates/core/: Cargo.toml
crates/core/src/: client.rs  connection_file.rs  events.rs  jupyter.rs  kernel.rs  kernel_session.rs  kernel_spec.rs  lib.rs  logger.rs
crates/core/src/kallichore/: mod.rs  server.rs
crates/core/src/kallichore/api/: generated.rs  mod.rs
crates/core/src/lsp/: backend.rs  completion.rs  documents.rs  mod.rs  position.rs  serve.rs  server.rs
crates/core/src/manager/: dir.rs  mod.rs  naming.rs  session.rs  store.rs
crates/core/src/session/: dir.rs  mod.rs  naming.rs  session.rs  sessions.rs  store.rs
crates/core/tests/: kcserver.rs
crates/lua/: Cargo.toml  build.rs
crates/lua/meta/: jet.lua
crates/lua/src/: lib.rs  poll.rs  router.rs  runtime.rs
crates/lua/src/api/: lifecycle.rs  mod.rs  request.rs  stdin.rs
crates/lua/tests/: lua_smoke.rs
crates/lua/tests/scripts/: .emmyrc.json  comm_lsp.lua  execute.lua  execute_smoke.lua  input.lua  input_request_smoke.lua  listen.lua  utils.lua
doc/: TASK_ASYNC_RPC.md  ark-comms.md  multi-kernel-approaches.md  r-bin-discovery.md  refactor.md  threads.md
docs/: README.md  implementation-summary.md  iopub-broker.md  visual-guide.md
examples/: broker_patterns.rs
inspo/ark-dev/issues/: 2023_05_30-update_wiki_re_nightly_compiler_for_rustfmt.md  2023_08_29-data_viewer_handling_data_frames_with_no_names.md  2024_10_01-for_jupyter_q_should_probably_be_overridden_to_error_and_tell_you_how_to_actually_shut_down_the_right_way.md  2024_10_04-add_changelog_file.md  2024_10_04-ark_issues_with_incomplete_inputs_in_jupyter_apps.md  2024_10_04-ark_panics_in_dummy_kernel_threads_should_be_propagated_to_test_harness.md  2024_10_05-use_actual_ark_binary_in_integration_tests.md  2024_10_07-emit_debug_prompts_on_std_in_in_notebook_mode.md  2024_10_10-fix_jupyter_connection_race_condition.md  2024_10_10-race_condition_between_the_r_and_amalthea_shell_threads.md  2024_10_14-unify_and_improve_code_paths_for_workspace_symbol_and_document_symbol.md  2024_10_15-amalthea_should_set_the_protocol_version_in_kernel_info.md  2024_10_15-implement_positron_functionality_in_separate_modules.md  2024_10_15-make_the_originator_a_global_rather_than_passing_it_through_arguments.md  2024_11_04-debug_builds_are_dead_on_arrival_due_to_embedded_file.md  (+70 more)
kernels/ark/: kernel.json
lua/: test.lua
lua/carpo/: rust.lua
lua/jet/: api.lua  config.lua  init.lua  kernel.lua  playground.lua  rust.lua  state.lua  test.R  utils.lua
lua_tests/: ark_comm.lua  ark_lsp.lua  call.lua  cursor_pos.lua  recursive_types.lua  start_ipykernel.lua  test_ark.lua  test_discovery.lua  test_evecxr.lua  test_ipykernel.lua  test_multi_kernel.lua  utils.lua
notes/: multi-kernel-approaches.md
scripts/: install-dev-kernels.sh  minitest
src/: api.rs  api_lua.rs  callback_output.rs  cli.rs  error.rs  frontend.rs  jupyter.rs  kernel.rs  lib.rs  main.rs  shutdown_guard.rs
src/connection/: connection.rs  control.rs  heartbeat.rs  iopub.rs  mod.rs  shell.rs  stdin.rs
src/frontend/: control.rs  frontend.rs  heartbeat.rs  iopub.rs  iopub_broker.rs  iopub_listener.rs  iopub_thread.rs  mod.rs  shell.rs  stdin.rs
src/kallichore/: api.rs  mod.rs  server.rs  session.rs
src/kernel/: connection_method.rs  discover.rs  kernel_spec.rs  mod.rs  startup_method.rs
src/msg/: broker.rs  connection_file.rs  error.rs  frontend.rs  hash.rs  mod.rs  port.rs  registration_file.rs  session.rs  socket.rs
src/render/: mod.rs  tmux.rs
src/supervisor/: broker.rs  frontend.rs  iopub_broker.rs  iopub_listener.rs  kernel.rs  kernel_comm.rs  kernel_info.rs  kernel_manager.rs  listeners.rs  manager.rs  mod.rs  reply_receivers.rs  request.rs
test-kernels/: .gitignore
test-kernels/ark/: kernel.json
test-kernels/python3/: kernel.json
test-kernels/python3-message/: kernel.json
tests/: ark.rs  frontend.rs  init.lua  ipykernel.rs  jet_utils.rs  kcserver.rs  startup.rs  test_chansend.lua  test_pipe_stdin.lua  test_send_repl.lua
(+865 files in other folders)
