[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
jet_core = { path = "crates/core" }

anyhow = "1"
crossbeam-channel = "0.5"
mlua = { version = "0.11", features = ["module", "luajit", "serde", "macros"] }
once_cell = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde"
] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
env_logger = "0.11"
futures-util = "0.3"
libc = "0.2"
log = "0.4"
portable-pty = "0.8"
progenitor-client = "=0.14.0"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls"
] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = [
  "connect",
  "rustls-tls-native-roots"
] }
url = "2"
whoami = "1"
