[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
jet_core = { path = "crates/core" }

anyhow = "1"
crossbeam-channel = "0.5"
mlua = { version = "0.11", features = ["module", "luajit", "serde", "macros"] }
once_cell = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
env_logger = "0.11"
futures-util = "0.3"
libc = "0.2"
log = "0.4"
portable-pty = "0.8"
rand = "0.8"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
