[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["cargo", "derive", "env", "wrap_help"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
futures-util = "0.3"
jet_core = { path = "crates/core" }
libc = "0.2"
log = "0.4"
mlua = { version = "0.11", features = ["luajit", "macros", "module", "serde"] }
once_cell = "1"
portable-pty = "0.8"
rand = "0.8"
reedline = { version = "0.48", features = ["external_printer"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serial_test = "3"
tokio = { version = "1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
