[package]
name = "jet_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jet"
path = "src/main.rs"

[dependencies]
jet_core.workspace = true

anyhow.workspace = true
base64.workspace = true
clap.workspace = true
inquire = { git = "https://github.com/wurli/inquire", default-features = false, features = ["crossterm", "fuzzy"] }
libc.workspace = true
log.workspace = true
rand.workspace = true
crossterm = "0.29"
nu-ansi-term = "0.50"
reedline.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
insta = "1.40"
portable-pty.workspace = true
serial_test.workspace = true
vt100 = "0.15"
