[package]
name = "jet"
version.workspace = true
edition.workspace = true
repository = "https://github.com/wurli/jet"

[[bin]]
name = "jet"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
crossterm = "0.29"
inquire = { git = "https://github.com/wurli/inquire", default-features = false, features = [
  "crossterm",
  "fuzzy"
] }
jet_core.workspace = true
libc.workspace = true
log.workspace = true
nu-ansi-term = "0.50"
rand.workspace = true
reedline.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
insta = "1.40"
portable-pty.workspace = true
serial_test.workspace = true
vt100 = "0.15"
