[package]
name = "jet_core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
log.workspace = true
progenitor-client.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
whoami.workspace = true

[dev-dependencies]
serial_test.workspace = true

[build-dependencies]
openapiv3 = "2"
# progenitor is pinned exactly: its output gets committed to
# src/kallichore/api/generated.rs, so any patch release that changes
# identifier names or codegen would dirty the working tree for everyone
# on the next `cargo build`. Formatting is delegated to rustfmt at build
# time.
progenitor = { version = "=0.14.0", default-features = false }
serde_json = "1"
