[package]
name = "jet_core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
env_logger.workspace = true
hex = "0.4"
jupyter-protocol = "2.0"
jupyter-zmq-client = { version = "1.0", default-features = false, features = ["tokio-runtime", "ring"] }
libc.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile = "3"
