[package]
name = "jet_lua"
version.workspace = true
edition.workspace = true
repository = "https://github.com/wurli/jet"

[lib]
# `cdylib` is what Neovim/LuaJIT loads via `require('jet')`.
# `rlib` lets `cargo test` link the integration test binary against the
# same compilation, so we don't rebuild dependencies twice per test run.
crate-type = ["cdylib", "rlib"]

[package.metadata.dist]
cdylibs = ["jet_lua"]
# No installer for the lua cdylib — it's loaded by Neovim via require(),
# not installed to a bin path.
installers = []

[dependencies]
anyhow.workspace = true
jet_core.workspace = true
log.workspace = true
mlua.workspace = true
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
